syntax = "proto3";

package medicine;
import "google/protobuf/timestamp.proto";

service MedicineService {
  rpc GetMedicineById(MedicineRequest) returns (MedicineResponse);
}

message MedicineRequest {
  string medicine_name = 1;
  string pharmacy_code = 2;
}

message MedicineResponse {
  string medicine_name = 1;
  string pharmacy_code = 2;
  int32 stock = 3;
  // TODO: 추후 예약에 필요한 정보만 넘길것
  string pharmacy_name = 4;
  string pharmacy_address = 5;
  string pharmacy_latitude = 6;
  string pharmacy_longitude = 7;
  string pharmacy_phoneNumber = 8;
  string pharmacy_email = 9;
  google.protobuf.Timestamp updated_at = 10;
}
